:recycle: Split `PUT` method into `POST` & `PUT`
Because we had both logic into a single method.
